--- a/nbs/dl2/12a_awd_lstm.ipynb
+++ b/nbs/dl2/12a_awd_lstm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,16 +80,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='45' class='' max='45', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [45/45 00:52<00:00]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='6' class='' max='6', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [6/6 00:07<00:00]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ll = label_by_func(sd, lambda x: 0, proc_x = [proc_tok,proc_num])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,16 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116 ms ± 3.36 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 y,h1 = lstm(x,h)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21 ms ± 1.04 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 time_fn(f)"
    ]
@@ -323,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,16 +424,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105 ms ± 2.32 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 y,h1 = lstm(x,h)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,9 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.05 ms ± 39.3 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 time_fn(f)"
    ]
@@ -416,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,16 +598,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.1 ms ± 3.09 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 y,h1 = lstm(x,h)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,9 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.5 ms ± 26.6 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 time_fn(f)"
    ]
@@ -576,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,9 +694,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2., 0., 0., 0., 2., 0., 2., 2., 2., 0.],\n",
+       "        [2., 2., 0., 0., 0., 2., 0., 2., 2., 0.],\n",
+       "        [0., 0., 2., 0., 0., 0., 0., 2., 2., 2.],\n",
+       "        [2., 0., 0., 2., 2., 0., 0., 0., 2., 0.],\n",
+       "        [0., 2., 2., 2., 0., 2., 0., 0., 0., 2.],\n",
+       "        [0., 0., 0., 2., 0., 0., 0., 0., 2., 0.],\n",
+       "        [0., 2., 2., 2., 2., 2., 0., 2., 0., 2.],\n",
+       "        [2., 0., 2., 0., 0., 2., 2., 2., 0., 0.],\n",
+       "        [0., 0., 2., 2., 0., 2., 0., 2., 0., 2.],\n",
+       "        [0., 2., 2., 2., 2., 2., 0., 0., 2., 0.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = torch.randn(10,10)\n",
     "mask = dropout_mask(x, (10,10), 0.5); mask"
@@ -604,9 +731,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1.2784), tensor(0.9176))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(x*mask).std(),x.std()"
    ]
@@ -620,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,9 +776,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[ 0.3761,  0.6054,  0.5860,  0.4928,  0.9763, -1.5269,  0.5505],\n",
+       "          [ 0.0795, -0.3307,  0.3344,  0.6953,  2.0980, -0.2898, -2.3497],\n",
+       "          [-0.8377,  0.9403, -0.8320,  1.3244,  0.0025,  1.1732, -0.7997]],\n",
+       " \n",
+       "         [[ 1.5880, -0.4631,  0.9032,  0.0312, -1.5343, -1.3273, -0.6369],\n",
+       "          [-0.0181, -1.1855, -0.7313,  2.3140,  0.0705,  0.2627, -0.0765],\n",
+       "          [-0.0785, -1.7597, -0.1922, -1.6794, -0.0164,  0.5775,  0.3740]],\n",
+       " \n",
+       "         [[ 0.9616, -0.7541, -1.0652,  0.3201,  0.4623, -0.4700, -0.3795],\n",
+       "          [-0.2918, -0.6557,  2.3698,  2.4446, -0.7982,  0.8236,  0.0833],\n",
+       "          [-0.1424,  0.8622,  0.5747, -0.5986, -2.2252,  2.4233,  1.2213]]]),\n",
+       " tensor([[[ 0.5373,  0.8649,  0.8372,  0.7040,  1.3947, -2.1812,  0.7864],\n",
+       "          [ 0.1136, -0.4724,  0.4777,  0.9932,  2.9971, -0.4140, -3.3567],\n",
+       "          [-1.1968,  1.3433, -1.1886,  1.8919,  0.0036,  1.6760, -1.1425]],\n",
+       " \n",
+       "         [[ 0.0000, -0.6615,  0.0000,  0.0000, -2.1918, -1.8961, -0.0000],\n",
+       "          [-0.0000, -1.6936, -0.0000,  0.0000,  0.1007,  0.3753, -0.0000],\n",
+       "          [-0.0000, -2.5138, -0.0000, -0.0000, -0.0234,  0.8250,  0.0000]],\n",
+       " \n",
+       "         [[ 1.3737, -1.0773, -1.5217,  0.4573,  0.6604, -0.6714, -0.0000],\n",
+       "          [-0.4168, -0.9368,  3.3855,  3.4923, -1.1403,  1.1766,  0.0000],\n",
+       "          [-0.2034,  1.2317,  0.8209, -0.8551, -3.1789,  3.4618,  0.0000]]]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dp = RNNDropout(0.3)\n",
     "tst_input = torch.randn(3,3,7)\n",
@@ -656,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,9 +867,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[-0.1124,  0.2148],\n",
+       "        [-0.6760,  0.5726],\n",
+       "        [-0.2460,  0.3784],\n",
+       "        [-0.0968, -0.5177],\n",
+       "        [ 0.6925,  0.0389],\n",
+       "        [ 0.6329,  0.1763],\n",
+       "        [-0.3146,  0.0283],\n",
+       "        [-0.0458, -0.3340]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "module = nn.LSTM(5, 2)\n",
     "dp_module = WeightDropout(module, 0.4)\n",
@@ -715,9 +904,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1873,  0.0000],\n",
+       "        [-0.0000,  0.9543],\n",
+       "        [-0.0000,  0.0000],\n",
+       "        [-0.1613, -0.8629],\n",
+       "        [ 1.1542,  0.0000],\n",
+       "        [ 1.0548,  0.2938],\n",
+       "        [-0.5243,  0.0000],\n",
+       "        [-0.0764, -0.0000]], grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tst_input = torch.randn(4,20,5)\n",
     "h = (torch.zeros(1,20,2), torch.zeros(1,20,2))\n",
@@ -734,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,9 +967,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0000,  0.0000, -0.0000, -0.0000, -0.0000, -0.0000,  0.0000],\n",
+       "        [-2.8783, -2.0118,  0.9328, -1.6233,  0.8392, -0.9077, -0.4968],\n",
+       "        [-1.0124, -0.7610,  0.3193,  0.1172, -0.5836, -1.2850, -0.1142],\n",
+       "        [ 0.0000, -0.0000, -0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [-2.4965,  0.9829, -1.6113, -0.4831, -3.1262, -2.5517, -0.3020],\n",
+       "        [-1.0813, -1.5138, -0.0283, -0.4239, -0.1787, -0.3316, -2.1635],\n",
+       "        [ 1.0755,  0.2982,  1.5759,  0.1479,  2.0363,  2.5943,  3.2337],\n",
+       "        [ 1.1605,  0.2195,  0.4335,  1.9674, -4.8340, -0.0521,  0.1346]],\n",
+       "       grad_fn=<EmbeddingBackward>)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enc = nn.Embedding(100, 7, padding_idx=1)\n",
     "enc_dp = EmbeddingDropout(enc, 0.5)\n",
@@ -786,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,18 +1389,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 12a_awd_lstm.ipynb to exp/nb_12a.py\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python notebook2script.py 12a_awd_lstm.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1189,6 +1435,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
