--- a/nbs/dl2/12c_ulmfit.ipynb
+++ b/nbs/dl2/12c_ulmfit.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,12 +119,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-12-16 17:44:06--  http://files.fast.ai/models/wt103_tiny.tgz\n",
+      "Resolving files.fast.ai (files.fast.ai)... 67.205.15.147\n",
+      "Connecting to files.fast.ai (files.fast.ai)|67.205.15.147|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 75482451 (72M) [application/x-gtar-compressed]\n",
+      "Saving to: ‘/storage/imdb/wt103_tiny.tgz’\n",
+      "\n",
+      "wt103_tiny.tgz      100%[===================>]  71.99M  24.8MB/s    in 2.9s    \n",
+      "\n",
+      "2019-12-16 17:44:09 (24.8 MB/s) - ‘/storage/imdb/wt103_tiny.tgz’ saved [75482451/75482451]\n",
+      "\n",
+      "tar: pretrained: Cannot mkdir: No space left on device\n",
+      "tar: pretrained: Cannot mkdir: No space left on device\n",
+      "\n",
+      "gzip: stdin: unexpected end of file\n",
+      "tar: Unexpected EOF in archive\n",
+      "tar: Error is not recoverable: exiting now\n"
+     ]
+    }
+   ],
    "source": [
-    "# ! wget http://files.fast.ai/models/wt103_tiny.tgz -P {path}\n",
-    "# ! tar xf {path}/wt103_tiny.tgz -C {path}"
+    "! wget http://files.fast.ai/models/wt103_tiny.tgz -P {path}\n",
+    "! tar xf {path}/wt103_tiny.tgz -C {path}"
    ]
   },
   {
@@ -1247,6 +1280,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
